Contact Details Update

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                                     <i class="fas fa-map-marker-alt text-primary me-3 fs-4"></i>
                                     <div>
                                         <h6 class="mb-1">Address</h6>
-                                        <p class="mb-0 text-muted">123 Business Street<br>City, State 12345</p>
+                                        <p class="mb-0 text-muted">25 Business St Delux 100, Brook Complex<br>Altrincham, Manchester</p>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
                                     <i class="fas fa-phone text-primary me-3 fs-4"></i>
                                     <div>
                                         <h6 class="mb-1">Phone</h6>
-                                        <p class="mb-0 text-muted">+1 (555) 123-4567</p>
+                                        <p class="mb-0 text-muted">+44 (7451) 123-4567</p>
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                                     <i class="fas fa-envelope text-primary me-3 fs-4"></i>
                                     <div>
                                         <h6 class="mb-1">Email</h6>
-                                        <p class="mb-0 text-muted">hello@website.com</p>
+                                        <p class="mb-0 text-muted">info@gerosmedia.com</p>
                                     </div>
                                 </div>
                             </div>
